# gitlab-ai-agent

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  config.py  docker-compose.yml  gitlab_client.py  llm.py  main.py  pyproject.toml
common/: agent.py  config.py  gitlab_client.py  llm.py
mcp_server/: main.py
webhook_handler/: main.py
