[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlab-ai-agent"
version = "0.1.0"
description = "AI agent for GitLab issue analysis and creation"
requires-python = ">=3.11"
dependencies = [
    # GitLab
    "python-gitlab>=4.0.0",
    # LLM abstraction (supports Anthropic, OpenAI, Ollama, vLLM, Mistral, etc.)
    "litellm>=1.40.0",
    # MCP server
    "mcp>=1.0.0",
    # Webhook handler
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # HTTP client
    "httpx>=0.27.0",
    # Config
    "pydantic-settings>=2.0.0",
    # Utilities
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "mcp_server", "webhook_handler"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
